--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,6 +1,7 @@
 <html>
   <head>
-	  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	  {% include base.html %}
+	  <link rel="stylesheet" type="text/css" href="{{ base }}/assets/css/style.css" />
   </head>
   <body>
     {{ content }}
