--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,5 +2,6 @@
   <ul>
     <li><a href="/">Home</a></li>
 	<li><a href="/projects">Code</a></li>
+	<li><a href="/blog">Blog</a></li>
   </ul>
 </div>
