Tweak to homepage display. Some more work on the blogs page.

--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -4,6 +4,10 @@
 	  <link rel="stylesheet" type="text/css" href="{{ base }}/assets/css/style.css" />
   </head>
   <body>
+    <div id="contactCard">
+    {% include nav.html %}
     {{ content }}
+    {% include footer.html %}
+    </div>
   </body>
 </html>
