--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -6,6 +6,7 @@
   <body>
     <div id="contactCard">
     {% include nav.html %}
+    <h1>{{ page.title }}</h1>
     {{ content }}
     {% include footer.html %}
     </div>
