Slight restyle/restructure of pages to get left and right blocks working as intended.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
 <div id="footer">
-  <p><a href="https://pages.github.com/">Powered by Github</a>. Views expressed in these pages were probably my own at the time of writing, and do not represent the views of any of my employers past, present or future. <a href="https://github.com/fst0pped/fst0pped.github.io">Theme code at Github</a>, feel free to fork.</p>
+  <p><a href="https://pages.github.com/">Powered by Github Pages</a>. Views expressed in these pages were probably my own at the time of writing, and do not represent the views of any of my employers past, present or future. <a href="https://github.com/fst0pped/fst0pped.github.io">Site code at Github</a>, feel free to fork.</p>
 </div>
