--- a/_layouts/front_page.html
+++ b/_layouts/front_page.html
@@ -2,7 +2,7 @@
 layout: page
 ---
 
-  <div id="profile">
+  <div id="profile" class="left_block">
     <div><img id="me" src="{{ base }}/assets/images/me.jpg" /></div>
     <div class="logo_container"><a href="https://uk.linkedin.com/pub/andrew-campbell/29/867/10"><img class="logo" src="{{ base }}/assets/images/linkedin.png" alt="linkedin" title="linkedin" /></a></div>
     <div class="logo_container"><a href="https://github.com/fst0pped"><img class="logo" src="{{ base }}/assets/images/github.png" alt="github logo" title="Github" /></a></div>
