Wrote first blog post.

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,6 +1,7 @@
 <html>
   <head>
 	  {% include base.html %}
+	  <meta charset="utf-8">
 	  <link rel="stylesheet" type="text/css" href="{{ base }}/assets/css/style.css" />
   </head>
   <body>
