Styled profile pic and logos

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,7 +5,7 @@
 	  <link rel="stylesheet" type="text/css" href="{{ base }}/assets/css/style.css" />
   </head>
   <body>
-    <div id="contactCard">
+    <div id="contact_card">
     {% include nav.html %}
     {{ content }}
     {% include footer.html %}
