Front page style completed. Stylesheet working for other pages.

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,7 +2,8 @@
   <head>
 	  {% include base.html %}
 	  <meta charset="utf-8">
-	  <link rel="stylesheet" type="text/css" href="{{ base }}/assets/css/style.css" />
+	  <!--<link rel="stylesheet" type="text/css" href="{{ base }}/assets/css/style.css" />-->
+          <link rel="stylesheet" type="text/css" href="../assets/css/style.css" />
   </head>
   <body>
     <div id="contact_card">
