--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -5,9 +5,8 @@
 	  <link rel="stylesheet" type="text/css" href="{{ base }}/assets/css/style.css" />
   </head>
   <body>
-    <div id="contactCard">
       {% include nav.html %}
-      <h1 class="blue">{{ page.title }}</h1>
+      <h1 id="blog_title" class="blue">{{ page.title }}</h1>
       <div id="blog_post">
         {{ content }}
       </div>
@@ -20,6 +19,5 @@
         {% endif %}
       </div>
     {% include footer.html %}
-    </div>
   </body>
 </html>
