--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -3,7 +3,7 @@
 	  <div id="menu_container">
     <li><a href="/">Home</a></li>
     <Li><a href="/about">About</a></li>
-    <li><a href="/blog">Blog</a></li>
+    <li><a href="http://www.blog.helloimandrew.co.uk">Blog</a></li>
     <li><a href="/projects">Code</a></li>
       </div>
   </ul>
