--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,7 +2,7 @@
   <ul>
 	  <div id="menu_container">
     <li><a href="/">Home</a></li>
-    <li><a href="http://www.blog.helloimandrew.co.uk">Blog</a></li>
+    <li><a href="https://medium.com/@andyc510">Blog</a></li>
     <li><a href="/projects">Code</a></li>
       </div>
   </ul>
