--- a/_includes/profile_pic.html
+++ b/_includes/profile_pic.html
@@ -2,7 +2,7 @@
     <img id="profile_pic" src="{{ base }}/assets/images/me.jpg" />
     <div id="logo_container">
       <a href="https://uk.linkedin.com/pub/andrew-campbell/29/867/10"><img class="logo" src="{{ base }}/assets/images/linkedin.png" alt="linkedin" title="linkedin" /></a>
-      <a href="https://twitter.com/helloandrewuk"><img class="logo" src="{{ base }}/assets/images/twitter.png" alt="Twitter logo" title="Twitter" /></a>
+      <a href="https://twitter.com/andrewcambeul"><img class="logo" src="{{ base }}/assets/images/twitter.png" alt="Twitter logo" title="Twitter" /></a>
       <a href="https://github.com/fst0pped"><img class="logo" src="{{ base }}/assets/images/github.png" alt="github logo" title="Github" /></a>
       <a href="https://plus.google.com/u/1/+AndrewCampbell84"><img class="logo" src="{{ base }}/assets/images/google.png" alt="Google+ logo" title="Google+" /></a>
     </div>
